# Grade11-Theatre-App

./: .gitignore  CMakeLists.txt  README.md  SchemaProiectPetrisor.xlsx  main.cbp  main.depend
Main/: bilet.txt  main.depend  personal.txt  spectator.txt
ProjectResources/: Queries.txt  SchemaBazaDeDate_Teatru.xlsx
Project_Files/: main.cpp  main.layout
TheatreDatabase/: main.cbp  main.cpp  main.depend  main.layout  piesa.txt
main/: actor.txt  bilet.txt  main.cbp  main.cpp  main.depend  main.layout  personaj.txt  personal.txt  piesa.txt  piesa_veche.txt  sala.txt  spectator.txt  spectator_vechi.txt
src/: actor.txt  main.cpp
src/Files/: piesa_veche.txt
